--- a/style.css
+++ b/style.css
@@ -3,6 +3,14 @@
    License: none (public domain)
 */
 
+@font-face{
+
+}
+@font-face {
+    font-family: DeliciousRoman;
+    src: url(/Delicious-Roman.otf);
+    }
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -63,12 +71,45 @@ p{
     margin: 0 auto;
     text-align: center;
     font-size: 50px;
-    margin-top: 15%;
+    margin-top: 5%;
     font-size: 30px;
     font-weight: bold;
     text-transform: uppercase;
 }
 
-#counter{
-    
+#continuer{
+    margin: 0 auto;
+}
+
+span{
+    color: black;
+}
+
+ul{
+    display: flex;
+    width: 25%;
+    flex-wrap: wrap;
+    flex-direction: row;
+    position: absolute;
+    top: 23%;
+    left: 0;
+}
+
+li{
+    width: 100%;
+    text-align: left;
+    display: flex;
+    color: black;
+    font-size: 20px;
+}
+
+#erreurnombre{
+    color: red;
+    margin: 2px 0;
+    font-size: 16px;
+
+}
+
+#diverreur{
+    height: 20px;
 }
